fix overflow

--- a/src/assets/styles/components/notes.less
+++ b/src/assets/styles/components/notes.less
@@ -180,7 +180,7 @@
   }
 
   .note {
-    width: 100%;
+    width: 99%;
     margin-right: 0;
   }
 }
