--- a/src/assets/styles/components/stats.less
+++ b/src/assets/styles/components/stats.less
@@ -1,6 +1,8 @@
 .stats {
   margin-top: auto;
   padding: 10px;
+  box-sizing: border-box;
+  width: 99%;
 
   .border_block();
 }
